fixed mobile layout issue

--- a/style.css
+++ b/style.css
@@ -705,8 +705,8 @@ footer p {
         margin-left: -0%;
         color: rgb(199, 226, 255);
     }
-    html, body {
-        overflow-x: hidden;
-        width: 100%;
+    html,body {
+        overflow-x: clip;
+        max-width: 100%;
     }
 }
